--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;1,300&display=swap');
+
+/* See how mozilla do it https://developer.mozilla.org/en-US/docs/Web/CSS */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-primary: #1b1b1b;
+    --background-secondary: #343434;
+    --text-primary: #fff;
+    --text-secondary: #cdcdcd;
+    --accent-primary: #5e9eff;
+    --text-link: #8cb4ff;
+    --button-primary-default: #fff;
+    --button-primary-hover: #cdcdcd;
+    --button-primary-active: #9e9e9e;
+    --button-primary-inactive: #fff;
+    --icon-primary: #fff;
+    --icon-secondary: #b3b3b3;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-primary: #fff;
+    --background-secondary: #f9f9fb;
+    --text-primary: #1b1b1b;
+    --text-secondary: #4e4e4e;
+    --accent-primary: #0085f2;
+    --text-link: #0069c2;
+    --button-primary-default: #1b1b1b;
+    --button-primary-hover: #696969;
+    --button-primary-active: #9e9e9e;
+    --button-primary-inactive: #1b1b1b;
+    --icon-primary: #696969;
+    --icon-secondary: #b3b3b3;
+  }
+}
+
+html[data-theme="light"] {
+  --background-primary: #fff;
+  --background-secondary: #f9f9fb;
+  --text-primary: #1b1b1b;
+  --text-secondary: #4e4e4e;
+  --accent-primary: #0085f2;
+  --text-link: #0069c2;
+  --button-primary-default: #1b1b1b;
+  --button-primary-hover: #696969;
+  --button-primary-active: #9e9e9e;
+  --button-primary-inactive: #1b1b1b;
+  --icon-primary: #696969;
+  --icon-secondary: #b3b3b3;
+}
+
+html[data-theme="dark"] {
+  --background-primary: #1b1b1b;
+  --background-secondary: #343434;
+  --text-primary: #fff;
+  --text-secondary: #cdcdcd;
+  --accent-primary: #5e9eff;
+  --text-link: #8cb4ff;
+  --button-primary-default: #fff;
+  --button-primary-hover: #cdcdcd;
+  --button-primary-active: #9e9e9e;
+  --button-primary-inactive: #fff;
+  --icon-primary: #fff;
+  --icon-secondary: #b3b3b3;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,15 +73,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --colour-background: blue;
-  --colour-foreground: #1f2023;
-  background: var(--colour-background);
-
-  @media (prefers-color-scheme: dark) {
-    --colour-background: red;
-    --colour-foreground: #efefef;
-  }
+  background-color: var(--background-primary);
+  accent-color: var(--accent-pimary);
+  color: var(--text-primary);
+  transition: background 0.2s linear;
 }
+
+
+
+
+
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
