--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;1,300&display=swap');
 
 /* See how mozilla do it https://developer.mozilla.org/en-US/docs/Web/CSS */
+/* images https://skylum.com/luminar */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -79,14 +80,11 @@ body {
   transition: background 0.2s linear;
 }
 
-
-
-
-
-
-
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none;
 }
