--- a/src/screens/home/home.module.css
+++ b/src/screens/home/home.module.css
@@ -92,5 +92,14 @@
 }
 
 .ben {
-    width: 600px;
+    width: 50%;
+    margin: 0 auto;
+
+}
+
+.hero_image {
+    position: absolute;
+    z-index: -999;
+    width: 100%;
+    display: flex;
 }
